  * Ensure you're providing at least Python 3.6.1
  * Ensure you're providing at least Qt 5.12 and PyQt 5.12
  * Add a new optional dependency on the Python `adblock` library (if packaged -
    if not, consider packaging it, albeit optional it's very useful for users)
  * Remove the `cssutils` optional dependency (if present)
  * Remove the `attrs` (`attr`) dependency
  * Move the `pygments` dependency from required to optional
  * TODO: Move the `setuptools` dependency from runtime (for `pkg_resources`) to
    build-time.
  * For Python 3.6, 3.7 or 3.8, add a dependency on the `importlib_resources`
    backport.
  * For Python 3.6 only, add a dependency on the `dataclasses` backport.
  * TODO complete?
- At least Python 3.6.1 is now required to run qutebrowser, support for Python
  3.5 (and 3.6.0) is dropped. Note that Python 3.5 is
  https://www.python.org/downloads/release/python-3510/[no longer supported
  upstream] since September 2020.
- At least Qt/PyQt 5.12 is now required to run qutebrowser, support for 5.7 to
  5.11 (inclusive) is dropped. While Debian Buster ships Qt 5.11, it's based on a
  Chromium version from 2018 with
  https://www.debian.org/releases/buster/amd64/release-notes/ch-information.en.html#browser-security[no Debian security support]
  and unsupported upstream since May 2019.
  It also has compatibility issues with various websites (GitHub, Twitch, Android
  Developer documentation, YouTube, ...). Since no newer Debian Stable is released
  at the time of writing, it's recommended to
  https://github.com/qutebrowser/qutebrowser/blob/master/doc/install.asciidoc#installing-qutebrowser-with-virtualenv[install qutebrowser in a virtualenv]
  with a newer version of Qt/PyQt.
- New optional dependency on the Python `adblock` library, which is now used to
  integrate Brave's Rust adblocker library, if the `adblock` module is available.
  If it is unavailable, qutebrowser falls back to host-blocking, i.e. the same