@@ -36,10 +36,6 @@ ignore_missing_imports = True
 # https://bitbucket.org/birkenfeld/pygments-main/issues/1485/type-hints
 ignore_missing_imports = True
 
-[mypy-pypeg2]
-# Pretty much inactive currently
-ignore_missing_imports = True
-
 [mypy-bdb]
 # stdlib, missing in typeshed
 # https://github.com/python/typeshed/issues/1019
@@ -52,10 +48,6 @@ ignore_missing_imports = True
 [mypy-pytest]
 # https://github.com/pytest-dev/pytest/issues/3342
 ignore_missing_imports = True
-
-[mypy-qutebrowser.browser.webkit.rfc6266]
-# subclasses dynamic PyPEG2 classes
-disallow_subclassing_any = False
 
 [mypy-qutebrowser.browser.browsertab]
 disallow_untyped_defs = True
