@@ -1,5 +1,4 @@
 Jinja2
-pyPEG2
 PyYAML
 attrs
 
