@@ -8,5 +8,4 @@ importlib-resources==5.0.0 ; python_version<"3.9"
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 Pygments==2.7.3
-pyPEG2==2.15.2
 PyYAML==5.3.1
