@@ -71,7 +71,7 @@ try:
         entry_points={'gui_scripts':
                       ['qutebrowser = qutebrowser.qutebrowser:main']},
         zip_safe=True,
-        install_requires=['pypeg2', 'jinja2', 'PyYAML',
+        install_requires=['jinja2', 'PyYAML',
                           'dataclasses; python_version < "3.7"',
                           'importlib_resources>=1.1.0; python_version < "3.9"'],
         python_requires='>=3.6',
